--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "FullStack 2020 Course Chapter 3",
   "main": "build/index.html",
   "scripts": {
-    "start": "node Notes.js",
-    "dev": "nodemon Notes.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abhay Desai",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.7",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
